update on audio player, modified interface and updated part of the js code

--- a/aplayer/page2.html
+++ b/aplayer/page2.html
@@ -67,15 +67,20 @@
               <audio preload id="audio1" controls="controls">Your browser does not support HTML5 Audio!</audio>
             </div>
             <div id="tracks">
-              <!-- &laquo; -->
-              <a id="btnPrev">≪</a>
-              <a id="shuffle-link">
-                <!-- <input type="checkbox" data-role="flipswitch" name="switch" id="shuffle"> -->
-                <input type="checkbox" checked data-toggle="toggle" data-size="mini" id="shuffle">
+              <button class="control-button" id="btnShuffle" title="Enable shuffle">
+              <button class="control-button" id="btnPrev" title="Previous">
+              </button>
+              <button class="control-button" id="btnNext" title="Next">
+              </button>
+              </button>
+              <button class="control-button" id="btnRepeat" title="Enable repeat">
+              </button>
 
-                <!-- <span>Shuffle</span> -->
+<!--               <a id="btnPrev">≪</a>
+              <a id="shuffle-link">
+                <input type="checkbox" checked data-toggle="toggle" data-size="mini" id="shuffle">
               </a>
-              <a id="btnNext">≫</a>
+              <a id="btnNext">≫</a> -->
             </div>
           </div>
           <hr align="center" width="100%">
