--- a/aplayer/page2.html
+++ b/aplayer/page2.html
@@ -9,11 +9,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet"/>
-
-
   <link rel="stylesheet" type="text/css" href="css/style2.css">
   <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400" rel="stylesheet">
-  <script src="js/id3-minimized.js"></script>
 </head>
 
 <body>
@@ -69,20 +66,18 @@
               <audio preload id="audio1" controls="controls">Your browser does not support HTML5 Audio!</audio>
             </div>
             <div id="tracks">
-              <button class="control-button" id="btnShuffle" title="Enable shuffle">
-              <button class="control-button" id="btnPrev" title="Previous">
+              <button class="control-button" id="btnShuffle">
+                <i class="fa fa-random" title="Toggle shuffle"></i>
+              <button class="control-button" id="btnPrev">
+                <i class="fa fa-step-backward" title="Previous"></i>
               </button>
-              <button class="control-button" id="btnNext" title="Next">
+              <button class="control-button" id="btnNext">
+                <i class="fa fa-step-forward" title="Next"></i>
               </button>
               </button>
-              <button class="control-button" id="btnRepeat" title="Enable repeat">
+              <button class="control-button" id="btnRepeat" >
+                <i class="fa fa-repeat" title="Toggle repeat"></i>
               </button>
-
-<!--               <a id="btnPrev">≪</a>
-              <a id="shuffle-link">
-                <input type="checkbox" checked data-toggle="toggle" data-size="mini" id="shuffle">
-              </a>
-              <a id="btnNext">≫</a> -->
             </div>
           </div>
           <hr align="center" width="100%">
