started using fontello icon from http://fontello.com/

--- a/aplayer/index.html
+++ b/aplayer/index.html
@@ -8,9 +8,10 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="css/style2.css">
+  <link rel="stylesheet" type="text/css" href="fontello/css/animation.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400" rel="stylesheet">
+
 </head>
 
 <body>
@@ -67,19 +68,19 @@
             </div>
             <div id="tracks">
               <button class="control-button control-button--active" id="btnShuffle">
-                <i class="fa fa-random" title="Toggle shuffle"></i>
+                <i class="icon-shuffle-1" title="Toggle shuffle">&#xe801;</i>
+              </button>
               <button class="control-button" id="btnPrev">
-                <i class="fa fa-step-backward" title="Previous"></i>
+                <i class="icon-backward" title="Previous">&#xf013;</i>
               </button>
-              <button class="control-button" id="btnNext">
-                <i class="fa fa-step-forward" title="Next"></i>
-              </button>
+              <button id="btnNext" class="control-button">
+                <i class="icon-fast-forward" title="Next">&#xf012;</i>
               </button>
               <button class="control-button" id="btnRepeat" >
-                <i class="fa fa-repeat" title="Toggle repeat"></i>
+                <i class="icon-loop" title="Toggle repeat">&#xe800;</i>
               </button>
               <button class="control-button" id="btnPlaylist" >
-                <i class="fa fa-list" title="Toggle playlist"></i>
+                <i class="icon-list" title="Toggle playlist">&#xe802;</i>
               </button>
             </div>
           </div>
