After menu button blut the navigation bar now collapses. Additionally, keydown on document can be used to controll media.

--- a/aplayer/index.html
+++ b/aplayer/index.html
@@ -22,7 +22,7 @@
         <a class="navbar-brand navbar-brand-logo" href="#">
           <span class="brand">APlayer</span>
         </a>
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#collapsable-nav" aria-controls="collapsableControl" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#collapsable-nav" aria-controls="collapsableControl" aria-expanded="false" aria-label="Toggle navigation" id="navbar-btn">
           <span class="navbar-toggler-icon"></span>
         </button>
 
