minor update on aplayer/js/script.js plus additional content to med_supplier_list.html

--- a/med_supplier_list.html
+++ b/med_supplier_list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0026)file:///tmp/tmpsb6i86.html -->
+<!-- saved from url=(0026)file:///tmp/tmpls5rod.html -->
 <html slick-uniqueid="3"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
@@ -17,7 +17,7 @@ var Showdown={extensions:{}},forEach=Showdown.forEach=function(e,n){if("function
 window.addEvent("domready",function(){var t=$("body"),e=(window.location.hash.substring(1),new Showdown.converter({extensions:["table","github","prettify","twitter"]}));t.set("html",e.makeHtml(t.getElement("pre").get("text")))});</script>
 	</head>
 	<body>
-		<article class="markdown-body" id="body"><h1 id="catalogesofmedicalsupplies">Cataloges of medical supplies</h1>
+		<article class="markdown-body" id="body"><h1 id="1catalogesofmedicalsupplies">1. Cataloges of medical supplies</h1>
 
 <ol>
 <li><p><a href="https://www.europages.co.uk/companies/medical%20supplies%20exporter.html">EUROPAGES UK medical supplies</a>
@@ -28,9 +28,9 @@ www.yell.com, I was unable to find much with <code class="prettyprint">medical s
 This one has an option for medical (general medical stuff I guess), so no search term, it provided a lot of options </p></li>
 </ol>
 
-<h1 id="sampleprofileofmedicalsuppliers">sample profile of medical suppliers</h1>
+<h1 id="2sampleprofileofmedicalsuppliers">2. sample profile of medical suppliers</h1>
 
-<h2 id="ynrinstrumentsltd">YNR Instruments Ltd</h2>
+<h2 id="21ynrinstrumentsltd">2.1 YNR Instruments Ltd</h2>
 
 <p><a href="https://www.ynrinstruments.co.uk/about-us.html">https://www.ynrinstruments.co.uk/about-us.html</a></p>
 
@@ -54,7 +54,7 @@ YNR Instruments Ltd</p>
 
 <hr>
 
-<h2 id="millerandmillerchemicalsltd">MILLER AND MILLER (CHEMICALS) LTD</h2>
+<h2 id="22millerandmillerchemicalsltd">2.2 MILLER AND MILLER (CHEMICALS) LTD</h2>
 
 <p><a href="http://millerandmillerchem.co.uk/">http://millerandmillerchem.co.uk</a></p>
 
@@ -89,7 +89,7 @@ info@millerandmillerchem.co.uk</p>
 
 <hr>
 
-<h2 id="londonmedicalsupplies">London Medical Supplies</h2>
+<h2 id="23londonmedicalsupplies">2.3 London Medical Supplies</h2>
 
 <p><a href="http://londonmedicalsupplies.net/">http://londonmedicalsupplies.net</a></p>
 
@@ -102,7 +102,7 @@ Email us: bitrena.com@gmail.com</p>
 
 <hr>
 
-<h2 id="hceexportmedicalequipment">HCE Export Medical Equipment</h2>
+<h2 id="24hceexportmedicalequipment">2.4 HCE Export Medical Equipment</h2>
 
 <p><a href="https://www.hce-uk.com/HCE-Export-Medical-Equipment">https://www.hce-uk.com/HCE-Export-Medical-Equipment</a></p>
 
@@ -128,7 +128,7 @@ Fax: 01784 460 337</p>
 
 <hr>
 
-<h2 id="medistockmedicalsupplies">Medistock medical supplies</h2>
+<h2 id="25medistockmedicalsupplies">2.5 Medistock medical supplies</h2>
 
 <p><a href="https://www.medistock.co.uk/">https://www.medistock.co.uk</a></p>
 
@@ -182,7 +182,47 @@ Fax: 01784 460 337</p>
 Orders &amp; Quotations - orders@medistock.co.uk
 Cosmetic Surgery - surgery@medistock.co.uk
 Office: 0845 601 5886
-Mobile: 07956 552594</p></article>
+Mobile: 07956 552594</p>
+
+<hr>
+
+<h2 id="26grupamedical">2.6 Grup A Medical</h2>
+
+<p><a href="http://grup-a.com/en.html">http://grup-a.com/en.html</a>
+Grup A Medical has been active in the domestic and foreign markets with new and diverse product groups by adding experience to existing knowledge since its foundation. Our company continues to work at the new production facility in Izmir along with its qualified personnel and necessary quality certificates.</p>
+
+<h3 id="ourproducts">OUR PRODUCTS</h3>
+
+<p>Grup A Medical, headed up with the principles of hygiene, inspection and thoroughness, produces disposable sterile surgical drapes, gowns, surgical packs and device covers as well as various disposable products.</p>
+
+<p>Produced from NON-WOVEN fabric, Grup A Medical products are unique in terms of providing extra hygiene and comfort to patients, healthcare personnel and visitors. These products, which reduce the risk of contamination or infection according to investigations, are fluid-free, breathable and thus provide maximum comfort for the patient and healthcare personnel.</p>
+
+<h4 id="sterilesurgicalpacks">STERILE SURGICAL PACKS</h4>
+
+<p>Universal Drape Packs  Gynecology Packs Cardiovascular Packs  Cardiology Packs  EENT PACKS Neurosurgery Pack  Ophthalmology Packs Oncology Packs  Orthopedic Packs  Urology Packs</p>
+
+<h4 id="gowns">GOWNS</h4>
+
+<p>Nonsterile Gowns  Sterile Gowns</p>
+
+<h4 id="drapes">DRAPES</h4>
+
+<p>Nonsterile Drapes  Sterile Drapes</p>
+
+<h4 id="surgicaldevicecovers">SURGICAL DEVICE COVERS</h4>
+
+<p>Device Covers</p>
+
+<h4 id="otherproducts">OTHER PRODUCTS</h4>
+
+<p>Stabilizers  Sterilization Wraps  Veterinary Products </p>
+
+<p>+90 232 254 40 66
++90 232 254 40 36 (FAX)</p>
+
+<p>Domestic Sales: satis@grup-a.com
+Overseas Sales: export@grup-a.com
+Imports: import@grup-a.com</p></article>
 	
 
 </body></html>
